# PosixShell

epita-ing-assistants-acu-42sh-2025-paris-33/: CMakeLists.txt  README.md
epita-ing-assistants-acu-42sh-2025-paris-33/src/: CMakeLists.txt  main.c
epita-ing-assistants-acu-42sh-2025-paris-33/src/builtin/: builtin.c  builtin.h
epita-ing-assistants-acu-42sh-2025-paris-33/src/exec/: exec.c  exec.h  exec_and_or.c  exec_and_or.h  exec_function.c  exec_function.h  exec_header.h  exec_if.c  exec_if.h  exec_pipe.c  exec_pipe.h  exec_redirection.c  exec_redirection.h  exec_variable.c  exec_variable.h  hash_map.c  hash_map.h  hash_map_func.c  hash_map_func.h
epita-ing-assistants-acu-42sh-2025-paris-33/src/expand/: expand.c  expand.h  expand_basic.c  expand_basic.h  expand_var.c  expand_var.h  expand_var_arobase.c  expand_var_arobase.h
epita-ing-assistants-acu-42sh-2025-paris-33/src/io_backend/: io_backend.c  io_backend.h
epita-ing-assistants-acu-42sh-2025-paris-33/src/lexer/: lexer.c  lexer.h
epita-ing-assistants-acu-42sh-2025-paris-33/src/parser/: ast.c  ast.h  parse_and_or.c  parse_and_or.h  parse_compoundlist.c  parse_compoundlist.h  parse_for.c  parse_for.h  parse_func.c  parse_func.h  parse_if.c  parse_if.h  parse_list.c  parse_list.h  parse_negation.c  parse_negation.h  parse_pipeline.c  parse_pipeline.h  parse_redirection.c  parse_redirection.h  parse_simple_command.c  parse_simple_command.h  parse_until.c  parse_until.h  parse_while.c  parse_while.h
epita-ing-assistants-acu-42sh-2025-paris-33/src/tools/: tools.c  tools.h  utils.c  utils.h
epita-ing-assistants-acu-42sh-2025-paris-33/tests/: test_python.py
epita-ing-assistants-acu-42sh-2025-paris-33/tests/and_or_test/: and_or HARD.sh  and_or newline.sh  and_or simple.sh  bad_and_and.sh  bad_ending_and.sh  bad_or_pipe.sh  bad_or_semicolon.sh
epita-ing-assistants-acu-42sh-2025-paris-33/tests/brackets_test/: brackets_double_while.sh  brackets_if.sh  brackets_lot_of_commands.sh  brackets_newline.sh  brackets_newline_medium.sh  brackets_pipe.sh  brackets_var.sh  brackets_weird.sh  simple_brackets.sh  simple_brackets_space.sh
epita-ing-assistants-acu-42sh-2025-paris-33/tests/break_test/: break_if_while.sh  break_not_positive.sh  double_break_until.sh  double_break_until_while.sh  double_break_while.sh  doublre_break_while_until.sh  for_break.sh  more_break_than_loop.sh  simple_break.sh
epita-ing-assistants-acu-42sh-2025-paris-33/tests/cd_test/: cd_basic.sh  cd_directory_non_exist.sh  cd_dot_slash.sh  cd_file.sh  cd_many_slash  cd_oldpwd.sh
epita-ing-assistants-acu-42sh-2025-paris-33/tests/continue_test/: continue_in_for.sh  continue_inside_if.sh  only_continue_in_for.sh
(+172 files in other folders)
